--- a/floralpage/index.html
+++ b/floralpage/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Floral</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
@@ -48,13 +48,13 @@
 					</div>
 				</div>
 			</div>
-			<div class="header px-3 px-md-0 position-relative">
+			<div class="header position-relative">
 				<div class="row">
 					<div class="leftHeader2 col-12 col-md-6">
 						<div class="d-flex justify-content-end mt-lg-5 me-lg-5"><img src="img/hdleftitem2.png"></div>
 						<div class="d-grid justify-content-center item4">
 							<div class="hdBox">
-								<h1 class="item5 mb-4 mb-lg-3">Flower <br> Arrangements</h1>
+								<h1 class="item5 mb-4 mb-lg-3">Flower Arrangements</h1>
 								<h3 class="item6">• For all special occasions •</h3>
 								<p class="item7">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
 								<div class="hdBox2 d-flex justify-content-center my-5">
@@ -74,7 +74,7 @@
 				<div class="container">
 					<div class="row headerItem">
 						<div class="col-6 col-md-3 mb-3 mb-md-0 text-white">
-							<h2 id="packages"></h2>
+							<h2 id="packages">"+"</h2>
 							<span>Packages Sold</span>
 						</div>
 						<div class="col-6 col-md-3 mb-md-0 text-white">
@@ -108,13 +108,15 @@
 				<div class="swiper mySwiper">
 			      <div class="swiper-wrapper">
 			        <div class="swiper-slide">
-			        	<div><img class="sw-item" src="img/ctn3.png"></div>
-			        	<div class="containerItem2">
-			        		<div class="d-flex justify-content-end ctnItem1"><i class="item-heart fas fa-heart"></i></div>
-			        		<h3>Lorem impsun</h3>
-				        	<div><span class="ctnbw-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</span></div>
-				        	<div class="my-4"><a class="ctnbw-item2" href="#"><span>READ MORE</span></a></div>
-				        </div>
+			        	<div>
+			        		<div><img class="sw-item" src="img/ctn3.png"></div>
+				        	<div class="containerItem2">
+				        		<div class="d-flex justify-content-end ctnItem1"><i class="item-heart fas fa-heart"></i></div>
+				        		<h3>Lorem impsun</h3>
+					        	<div><span class="ctnbw-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</span></div>
+					        	<div class="my-4"><a class="ctnbw-item2" href="#"><span>READ MORE</span></a></div>
+					        </div>
+			        	</div>
 			        </div>
 			        <div class="swiper-slide">
 			        	<div><img class="sw-item" src="img/ctn4.png"></div>
@@ -199,21 +201,21 @@
 				<div class="container">
 					<div class="row justify-content-center">
 						<div class="containerItem5 position-relative">
-							<div class="containerItem4 d-none d-md-block"><img src="img/ctn12.png" width="100%"></div>
+							<div class="containerItem4 "><img src="img/ctn12.png" width="100%"></div>
 							<div>
 								<div class="ctnvideo position-relative">
-									<div class="d-flex justify-content-center"><img class="ctnbt-item" src="img/ctn11.png"></div>
+									<div class="d-flex justify-content-center ctn-item13"><img class="ctnbt-item" src="img/ctn11.png"></div>
 									<i class="far fa-play-circle ctnvideo-click position-absolute"></i>
 								</div>
 								<iframe class="ctnvideo2" width="100%" src="https://www.youtube.com/embed/LaxkmhiECfM?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>	
-							<div class="containerItem6 d-none d-md-block"><img src="img/ctn13.png" width="100%"></div>
+							<div class="containerItem6 "><img src="img/ctn13.png" width="100%"></div>
 						</div>
 					</div>
 				</div>
 				<div class="containerItem8 d-none d-xl-block"><div><img src="img/ctn14.png" width="100%"></div></div>
 			</div>
-			<div class="containerBanner mb-5 px-3 px-md-0 pt-md-5 position-relative">
+			<div class="containerBanner mb-5 pt-md-5 position-relative">
 				<div class="row">
 					<div class="leftctnBanner col-md-6">
 						<div class="d-flex justify-content-center mt-md-2 mb-md-3 mt-lg-5 mb-lg-4"><button class="ctnBanner-item"><span class="ctnBanner-item2">SPECIAL OFFER</span></button></div>
@@ -236,8 +238,8 @@
 					<div class="leftctn2 col-12 col-lg-7 d-flex justify-content-center mb-3">
 						<div class="ctn2-item position-relative">
 							<img src="img/ctn18.png" width="100%">
-							<div class="position-absolute ctn2-item2 d-none d-md-block"><img src="img/ctn19.png" width="100%"></div>
-							<div class="position-absolute ctn2-item3 d-none d-md-block"><img src="img/ctn20.png" width="100%"></div>
+							<div class="position-absolute ctn2-item2 "><img src="img/ctn19.png" width="100%"></div>
+							<div class="position-absolute ctn2-item3 "><img src="img/ctn20.png" width="100%"></div>
 						</div>
 					</div>
 					<div class="rigtctn2 col-12 col-lg-5 d-grid">
@@ -262,8 +264,8 @@
 					<div class="rightcnt3 col-lg-7 d-flex justify-content-center mb-md-5 mb-lg-0 ">
 						<div class="ctn3-item position-relative mb-5 mb-lg-0 px-3 px-lg-0">
 							<img src="img/ctn27.png" width="100%">
-							<div class="position-absolute ctn3-item2 d-none d-md-block"><img src="img/ctn19.png" width="100%"></div>
-							<div class="position-absolute ctn3-item3 d-none d-md-block"><img src="img/ctn20.png" width="100%"></div>
+							<div class="position-absolute ctn3-item2 "><img src="img/ctn19.png" width="100%"></div>
+							<div class="position-absolute ctn3-item3 "><img src="img/ctn20.png" width="100%"></div>
 						</div>
 					</div>
 					<div class="leftctn4 rigtctn2 col-lg-5 d-lg-none px-3 px-lg-0 d-grid">
@@ -282,8 +284,8 @@
 					<div class="leftctn2 col-lg-7 d-flex justify-content-center mb-3 mb-lg-0">
 						<div class="ctn2-item position-relative px-3 px-lg-0">
 							<img src="img/ctn29.png" width="100%">
-							<div class="position-absolute ctn4-item2 d-none d-md-block"><img src="img/ctn19.png" width="100%"></div>
-							<div class="position-absolute ctn4-item3 d-none d-md-block"><img src="img/ctn20.png" width="100%"></div>
+							<div class="position-absolute ctn4-item2"><img src="img/ctn19.png" width="100%"></div>
+							<div class="position-absolute ctn4-item3"><img src="img/ctn20.png" width="100%"></div>
 						</div>
 					</div>
 					<div class="rigtctn2 col-lg-5 mt-5 mb-lg-0 px-3 px-lg-0 d-grid">
@@ -314,25 +316,25 @@
 					<div class="row footerItem pt-5 px-3 px-lg-0">
 						<div class="col-lg-4 col-md-4 ftItem">
 							<h3>About</h3>
-							<li><a href="#">History</a></li>
-							<li><a href="#">Our Teame</a></li>
-							<li><a href="#">Mission Statement</a></li>
-							<li><a href="#">Terms&Condition</a></li>
-							<li><a href="#">Privacy Policy</a></li> 
+							<li><a class="ft-item9" href="#">History</a></li>
+							<li><a class="ft-item9" href="#">Our Teame</a></li>
+							<li><a class="ft-item9" href="#">Mission Statement</a></li>
+							<li><a class="ft-item9" href="#">Terms&Condition</a></li>
+							<li><a class="ft-item9" href="#">Privacy Policy</a></li> 
 						</div>
 						<div class="col-lg-4 col-md-4 ftItem">
 							<h3>What We Do</h3>
-							<li><a href="#">News and stories</a></li>
-							<li><a href="#">Publications</a></li>
-							<li><a href="#">Take action</a></li>
-							<li><a href="#">Recomendations</a></li>
-							<li><a href="#">Help</a></li>
+							<li><a class="ft-item9" href="#">News and stories</a></li>
+							<li><a class="ft-item9" href="#">Publications</a></li>
+							<li><a class="ft-item9" href="#">Take action</a></li>
+							<li><a class="ft-item9" href="#">Recomendations</a></li>
+							<li><a class="ft-item9" href="#">Help</a></li>
 						</div>
 						<div class="col-lg-4 col-md-4 ftItem">
 							<h3>Your Copany</h3>
-							<li><a href="#">Halimun Street 25</a></li>
-							<li><a href="#">Jakarta, City 1234</a></li>
-							<li><a href="#">www.yourflowersite.com</a></li>
+							<li><a class="ft-item9" href="#">Halimun Street 25</a></li>
+							<li><a class="ft-item9" href="#">Jakarta, City 1234</a></li>
+							<li><a class="ft-item9" href="#">www.yourflowersite.com</a></li>
 						</div>
 					</div>
 					<div class="footerMxh d-flex pt-3 d-flex justify-content-end">
