--- a/floral_page/html/floral.html
+++ b/floral_page/html/floral.html
@@ -57,7 +57,7 @@
                     </div>
                     <div class="text-contain">
                         <h2>Flower <br> Arrangements</h2>
-                        <li>For all special occasions</li>
+                        <h3>For all special occasions</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
                     </div>
                     <div class="flower-arr-choose">
@@ -75,19 +75,19 @@
         </div>
         <div class="container-fluid-sales container-fluid">
             <div class="sales row">
-                <div class="number-run package-sold-number col-xl-3 col-lg-3 col-md-6">
+                <div class="number-run package-sold-number col-xl-3 col-lg-3 col-md-6 col-sm-6">
                     <h3 id="package-sold-number">3000</h3>
                     <h4>Packages Sold</h4>
                 </div>
-                <div class="number-run bouquet-sold col-xl-3 col-lg-3 col-md-6"> 
+                <div class="number-run bouquet-sold col-xl-3 col-lg-3 col-md-6 col-sm-6"> 
                     <h3 id="bouquet-sold-number">5000</h3>
                     <h4>Bouquet Sold</h4>
                 </div>
-                <div class="number-run happy-clients col-xl-3 col-lg-3 col-md-6">
+                <div class="number-run happy-clients col-xl-3 col-lg-3 col-md-6 col-sm-6">
                      <h3 id="happy-clients-number">7000</h3>
                      <h4>Happy Clients</h4>
                     </div>
-                <div class="number-run year-of-exp col-xl-3 col-lg-3 col-md-6">
+                <div class="number-run year-of-exp col-xl-3 col-lg-3 col-md-6 col-sm-6">
                      <h3 id="year-of-exp-number">10</h3>
                      <h4>Years of Experience</h4>
                     </div>
@@ -112,9 +112,16 @@
                         <div class="flower-image-slider">
                             <img src="/floral_page/img_and_fonts/image/flower_product.png" alt="">
                         </div>
+                        <div class="love-icon-click">
+                            <i class="fa-regular fa-heart love_icon"></i>
+                        </div>
                         <div class="intro-text-product">
-                            <h3>Lorem impsun</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur elit, sed do eiusmod tempor</p>
+                            <div class="heading-container-text-product">
+                                <h3>Lorem impsun</h3>
+                            </div>
+                            <div class="container-paragraph-product">
+                                <p>Lorem ipsum dolor sit amet consectetur elit, sed do eiusmod tempor</p>
+                            </div>
                         </div>
                         <div class="more-btn">
                             <button class="read-more-btn">Read More</button>
@@ -124,9 +131,16 @@
                         <div class="flower-image-slider">
                             <img src="/floral_page/img_and_fonts/image/flower_product_2.png" alt="">                            
                         </div>
+                        <div class="love-icon-click">
+                            <i class="fa-regular fa-heart love_icon"></i>
+                        </div>
                         <div class="intro-text-product">
-                            <h3>Lorem impsun</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur elit, sed do eiusmod tempor</p>
+                            <div class="heading-container-text-product">
+                                <h3>Lorem impsun</h3>
+                            </div>
+                            <div class="container-paragraph-product">
+                                <p>Lorem ipsum dolor sit amet consectetur elit, sed do eiusmod tempor</p>
+                            </div>
                         </div>
                         <div class="more-btn">
                             <button class="read-more-btn">Read More</button>
@@ -136,9 +150,16 @@
                         <div class="flower-image-slider">
                             <img src="/floral_page/img_and_fonts/image/flower_product_3.png" alt="">                            
                         </div>
+                        <div class="love-icon-click">
+                            <i class="fa-regular fa-heart love_icon"></i>
+                        </div>
                         <div class="intro-text-product">
-                            <h3>Lorem impsun</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur elit, sed do eiusmod tempor</p>
+                            <div class="heading-container-text-product">
+                                <h3>Lorem impsun</h3>
+                            </div>
+                            <div class="container-paragraph-product">
+                                <p>Lorem ipsum dolor sit amet consectetur elit, sed do eiusmod tempor</p>
+                            </div>
                         </div>
                         <div class="more-btn">
                             <button class="read-more-btn">Read More</button>
@@ -148,9 +169,16 @@
                         <div class="flower-image-slider">
                             <img src="/floral_page/img_and_fonts/image/flower_product_4.png" alt="">
                         </div>
+                        <div class="love-icon-click">
+                            <i class="fa-regular fa-heart love_icon"></i>
+                        </div>
                         <div class="intro-text-product">
-                            <h3>Lorem impsun</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur elit, sed do eiusmod tempor</p>
+                            <div class="heading-container-text-product">
+                                <h3>Lorem impsun</h3>
+                            </div>
+                            <div class="container-paragraph-product">
+                                <p>Lorem ipsum dolor sit amet consectetur elit, sed do eiusmod tempor</p>
+                            </div>
                         </div>
                         <div class="more-btn">
                             <button class="read-more-btn">Read More</button>
@@ -160,9 +188,16 @@
                         <div class="flower-image-slider">
                             <img src="/floral_page/img_and_fonts/image/flower_product_4.png" alt="">                          
                         </div>
+                        <div class="love-icon-click">
+                            <i class="fa-regular fa-heart love_icon"></i>
+                        </div>
                         <div class="intro-text-product">
-                            <h3>Lorem impsun</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur elit, sed do eiusmod tempor</p>
+                            <div class="heading-container-text-product">
+                                <h3>Lorem impsun</h3>
+                            </div>
+                            <div class="container-paragraph-product">
+                                <p>Lorem ipsum dolor sit amet consectetur elit, sed do eiusmod tempor</p>
+                            </div>
                         </div>
                         <div class="more-btn">
                             <button class="read-more-btn">Read More</button>
@@ -185,7 +220,10 @@
             <h4>Lorem ipsum dolor sit amet, consectetur</h4>
                 <div class="video-how-we-do-it">
                     <div class="container-video-how-we-do-it">
-                        <video src="/floral_page/img_and_fonts/image/Asymmetric flower arrangement.mp4" controls></video>             
+                        <i class="fa-solid fa-circle-play"></i>
+                        <video class="video-how-to" poster="/floral_page/img_and_fonts/image/shape_video.png">
+                            <source src="/floral_page/img_and_fonts/image/Asymmetric flower arrangement.mp4">
+                        </video>             
                     </div>
                 </div>
                 <div class="left-right-how-we-do-it"><img src="/floral_page/img_and_fonts/image/leaf_how_we_do_it_2.png" alt=""></div>
@@ -232,9 +270,13 @@
                     <div class="image-leaf-best-flower">
                         <img src="/floral_page/img_and_fonts/image/leaf_best_flower.png" alt="">
                     </div>
-                    <div class="container-text-takecare-detail">
-                        <h2>We take care of the details</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+                    <div class="container-text-take-care-detail">
+                        <div class="heading-container-take-care-detail">
+                            <h2>We take care of the details</h2>
+                        </div>
+                        <div class="container-paragraph-take-care-detail">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+                        </div>
                     </div>
                     <div class="more-btn">
                         <button class="read-more-btn">Read More</button>
@@ -262,8 +304,12 @@
                 </div>
                 <div class="container-text-love-what-we-do">
                     <div class="text-contain-love-what-we-do">
-                        <h2>We love what we do</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+                        <div class="heading-container-love-what-we-do">
+                            <h2>We love what we do</h2>
+                        </div>
+                        <div class="paragraph-container-love-what-we-do">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+                        </div>
                     </div>
                     <div class="more-btn">
                         <button class="read-more-btn">Read More</button>
@@ -283,38 +329,103 @@
                 </div>
             </div>
             <div class="fill-form">
-                <input id="Name" class="name-form" type="text" placeholder="Your Name">
-                <input id="mail" class="mail-form" type="email" placeholder="Mail">
-                <input id="message" class="message-form" type="text" placeholder="Messages">
+                <form class="container-form">
+                    <input class="name-form" placeholder="Your Name"></input>
+                </form>
+                <form class="container-form">
+                    <input class="mail-form" placeholder="Mail"></input>
+                </form>
+                <form class="container-form" name="frm" method="POST">
+                    <textarea name="dd_fc_comment" class="main_txt_area" placeholder="Messages" style="resize: none" onkeyup="return displayWordCounter();"></textarea><br>
+                </form>
             </div>
             <div class="send-message-btn">
                 <a href="">Send Message</a>
             </div>
         </div>
-        <div class="footer"></div>
+        <div class="footer">
+            <div class="container-footer row container-fluid">
+                <div class="about col-lg-4 col-md-4">
+                    <div class="container-heading-text-about">
+                        <div class="container-heading-footer">
+                            <h3>About</h3>
+                        </div>
+                        <div class="heading-list about-list">
+                            <h4>History</h4>
+                            <h4>Our Team</h4>
+                            <h4>Mission Statement</h4>
+                            <h4>Term&Condition</h4>
+                            <h4>Privacy Policy</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="what-we-do col-lg-3 col-md-4">
+                    <div class="container-heading-text-what-we-do">
+                        <div class="container-heading-footer">
+                            <h3>What we do</h3>
+                        </div>
+                        <div class="heading-list what-we-do-list">
+                            <h4>News and stories</h4>
+                            <h4>Publications</h4>
+                            <h4>Take action</h4>
+                            <h4>Recommendations</h4>
+                            <h4>Helo</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="your-company col-lg-5 col-md-4">
+                    <div class="your-company-address">
+                        <div class="container-heading-footer">
+                            <h3>Your Company</h3>
+                        </div>
+                        <div class="heading-list company-address-list">
+                            <h4>Halimun Street 25</h4>
+                            <h4>Jakarta, City 1234</h4>
+                            <h4>www.yourflowersite.com</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="follow-us">
+                <div class="heading-follow-us">
+                    <h4>Follow us</h4>
+                </div>
+                <div class="facebook-icon"><a href=""><i class="fa-brands fa-facebook-f"></i></a></div>
+                <div class="instagram-icon"><a href=""><i class="fa-brands fa-instagram"></i></a></div>
+                <div class="youtube-icon"><a href=""><i class="fa-brands fa-youtube"></i></a></div>
+            </div>
+        </div>
     </div>
     <div class="nav_overlay js-sidebar-overlay">
         <div class="nav_sidebar">
           <div class="sidebar-close js-sidebar-close">
             <i class="ti-close"></i>
           </div>
-          <ul class="nav_list">
-            <li>
-              <a class="nav_link" href="">Home</a>
-            </li>
-            <li>
-              <a class="nav_link" href="">Services</a>
-            </li>
-            <li>
-              <a class="nav_link" href="">About</a>
-            </li>
-            <li>
-              <a class="nav_link" href="">Contact</a>
-            </li>
-            <li>
-                <a class="nav_link" href="">Sign In</a>
-              </li>
-          </ul>
+          <div class="container-nav-list">
+              <ul class="nav_list">
+                <li>
+                  <a class="nav_link" href="">Home</a>
+                </li>
+                <li>
+                  <a class="nav_link" href="">Services</a>
+                </li>
+                <li>
+                  <a class="nav_link" href="">About</a>
+                </li>
+                <li>
+                  <a class="nav_link" href="">Contact</a>
+                </li>
+                <li>
+                    <a class="nav_link" href="">Sign In</a>
+                  </li>
+                <li>
+                    <a href=""><i class="fa-solid fa-user"></i></a>
+                </li>
+                <li>
+                    <a href=""><i class="fa-solid fa-bag-shopping"></i></a> 
+                </li>
+              </ul>
+          </div>
         </div>
       </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
