--- a/floral_page/html/floral.html
+++ b/floral_page/html/floral.html
@@ -345,7 +345,7 @@
         </div>
         <div class="footer">
             <div class="container-footer row container-fluid">
-                <div class="about col-lg-4 col-md-4">
+                <div class="about col-lg-4 col-md-4 col-sm-6">
                     <div class="container-heading-text-about">
                         <div class="container-heading-footer">
                             <h3>About</h3>
@@ -359,7 +359,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="what-we-do col-lg-3 col-md-4">
+                <div class="what-we-do col-lg-3 col-md-3 col-sm-6">
                     <div class="container-heading-text-what-we-do">
                         <div class="container-heading-footer">
                             <h3>What we do</h3>
@@ -373,7 +373,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="your-company col-lg-5 col-md-4">
+                <div class="your-company col-lg-5 col-md-5 col-sm-6">
                     <div class="your-company-address">
                         <div class="container-heading-footer">
                             <h3>Your Company</h3>
@@ -387,12 +387,16 @@
                 </div>
             </div>
             <div class="follow-us">
-                <div class="heading-follow-us">
-                    <h4>Follow us</h4>
+                <div class="heading-follow-us col-sm-6">
+                    <div class="contain-follow-us">
+                        <h4>Follow us</h4>
+                    </div>
                 </div>
-                <div class="facebook-icon"><a href=""><i class="fa-brands fa-facebook-f"></i></a></div>
-                <div class="instagram-icon"><a href=""><i class="fa-brands fa-instagram"></i></a></div>
-                <div class="youtube-icon"><a href=""><i class="fa-brands fa-youtube"></i></a></div>
+                <div class="icon-footer">
+                        <div class="facebook-icon"><a href=""><i class="fa-brands fa-facebook-f"></i></a></div>
+                        <div class="instagram-icon"><a href=""><i class="fa-brands fa-instagram"></i></a></div>
+                        <div class="youtube-icon"><a href=""><i class="fa-brands fa-youtube"></i></a></div>
+                </div>
             </div>
         </div>
     </div>
