--- a/floral_page/html/floral.html
+++ b/floral_page/html/floral.html
@@ -387,9 +387,9 @@
                 </div>
             </div>
             <div class="follow-us">
-                <div class="heading-follow-us col-sm-6">
+                <div class="heading-follow-us">
                     <div class="contain-follow-us">
-                        <h4>Follow us</h4>
+                        <h4>Follow us!</h4>
                     </div>
                 </div>
                 <div class="icon-footer">
