--- a/floral_page/html/floral.html
+++ b/floral_page/html/floral.html
@@ -213,6 +213,10 @@
                     </div>
                 </div>
             </div>
+            <!-- <div class="container-button-slick">
+                <button type="button" class="slick-prev pull-left slick-arrow"><i class="fa-solid fa-arrow-left"></i></button>
+                <button type="button" class="slick-next pull-right slick-arrow"><i class="fa-solid fa-arrow-right"></i></button>
+            </div> -->
         </div>
         <div class="how-we-do-it-content">
             <div class="leaf-left-how-we-do-it"><img src="/floral_page/img_and_fonts/image/leaf_how_we_do_it_1.png" alt=""></div>
