--- a/flower-store/index.html
+++ b/flower-store/index.html
@@ -28,7 +28,7 @@
                             <a class="nav-item nav-link active" href="#">Service</a>
                             <a class="nav-item nav-link active" href="#">About</a>
                             <a class="nav-item nav-link active" href="#">Contact</a>
-                            <a class="nav-item nav-link active" id="sign_in" href="#">Sign in</a>
+                            <a class="nav-item nav-link active sign_in" href="#">Sign in</a>
                         </div>
                         <div class="box_session navbar-text">
                             <a href="">
@@ -363,14 +363,20 @@
                 <div class="row no-gutters">
                     <div class="col-md-6 offer_detail">
                         <div class="box_offer_detail text-center">
-                            <div class="box_offer_text">
-                                <a href="" class="btn offer_title">Special Offer</a>
-                                <p class="cost_offer">20%</p>
-                                <p class="offer_text">Discount on your first purchase</p>
+                            <div  class="offer_title">
+                                <p class="btn offer_title_text"> Special Offer</p>
                             </div>
-                            <div class="box_leaf">
-                                <img src="./assets/img/left_left.png" alt="">
-                                <img src="./assets/img/left_right.png" alt="">
+                            <div class="box_offer_text">
+                                <div class="box_leaf">
+                                    <img src="./assets/img/left_left.png" alt="">
+                                </div>
+                                <p class="cost_offer">20%</p>
+                                <div class="box_leaf">
+                                    <img src="./assets/img/left_right.png" alt="">
+                                </div>
+                            </div>
+                            <div class="offer_text">
+                                <p>Discount on your first purchase</p>
                             </div>
                         </div>
                     </div>
