--- a/floralpage/index.html
+++ b/floralpage/index.html
@@ -29,8 +29,8 @@
 							<li class="item1 mx-lg-2 mx-xl-3"><a class="login hdItem1" href="#">SIGN IN</a></li>
 						</div>
 						<div class="d-flex justify-content-end m-auto topHeader">
-							<a href="#"><div class="item2 mx-3"><img src="img/Sesion.png" width="100%"></div></a>
-							<a href="#"><div class="item2 mx-3"><img src="img/Shop.png" width="100%"></div></a>
+							<a href="#"><div class="item3 mx-3"><img src="img/Sesion.png" width="100%"></div></a>
+							<a href="#"><div class="item3 mx-3"><img src="img/Shop.png" width="100%"></div></a>
 							<button class="btnPr btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><div class="item2 mx-3"><img src="img/Menu.png" width="100%"></div></i>
 			                </button>
 			                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
@@ -233,8 +233,8 @@
 					</div>
 				</div>
 			</div>
-			<div class="container2 px-3 px-lg-0 mb-5 pt-md-5">
-				<div class="row">
+			<div class="container2  mb-5 pt-md-5">
+				<div class="row px-3 px-lg-0">
 					<div class="leftctn2 col-12 col-lg-7 d-flex justify-content-center mb-3">
 						<div class="ctn2-item position-relative">
 							<img src="img/ctn18.png" width="100%">
@@ -249,7 +249,7 @@
 						<div class="ctn2-item11"><a href="#"class="ctn2-item8"><span class="ctn2-item9">READ MORE</span></a></div>
 					</div>
 				</div>
-				<div class=" justify-content-end ctn2-item10 d-none d-xl-flex"><img src="img/ctn23.png" width="120px"></div>
+				<div class=" justify-content-end ctn2-item10 d-flex"><img src="img/ctn23.png" width="120px"></div>
 			</div>
 			<div class="container3 mb-5 pt-md-5 pt-lg-0">
 				<div class="row">
@@ -276,7 +276,7 @@
 							<div class="ctn2-item11"><a href="#"class="ctn2-item8"><span class="ctn2-item9">READ MORE</span></a></div>
 						</div>
 					</div>
-					<div class="d-flex justify-content-start d-none d-lg-block"><img class="ctn2-item12" src="img/ctn28.png" width="100px"></div>
+					<div class="d-flex justify-content-start"><img class="ctn2-item12" src="img/ctn28.png" width="100px"></div>
 				</div>
 			</div>
 			<div class="container4 mb-3 pt-md-5">
