--- a/floral_page/html/floral.html
+++ b/floral_page/html/floral.html
@@ -56,7 +56,9 @@
                         <img src="/floral_page/img_and_fonts/image/Leafs2.png" alt="">
                     </div>
                     <div class="text-contain">
-                        <h2>Flower <br> Arrangements</h2>
+                        <div class="container-heading-flower-arr">
+                            <h2>Flower Arrangements</h2>
+                        </div>
                         <h3>For all special occasions</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
                     </div>
@@ -213,10 +215,6 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="container-button-slick">
-                <button type="button" class="slick-prev pull-left slick-arrow"><i class="fa-solid fa-arrow-left"></i></button>
-                <button type="button" class="slick-next pull-right slick-arrow"><i class="fa-solid fa-arrow-right"></i></button>
-            </div> -->
         </div>
         <div class="how-we-do-it-content">
             <div class="leaf-left-how-we-do-it"><img src="/floral_page/img_and_fonts/image/leaf_how_we_do_it_1.png" alt=""></div>
@@ -363,7 +361,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="what-we-do col-lg-3 col-md-3 col-sm-6">
+                <div class="what-we-do col-lg-4 col-md-4 col-sm-6">
                     <div class="container-heading-text-what-we-do">
                         <div class="container-heading-footer">
                             <h3>What we do</h3>
@@ -377,7 +375,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="your-company col-lg-5 col-md-5 col-sm-6">
+                <div class="your-company col-lg-4 col-md-4 col-sm-6">
                     <div class="your-company-address">
                         <div class="container-heading-footer">
                             <h3>Your Company</h3>
